# smn_site_ciri

./: Cargo.toml
components/: background.html  header.html  underConstruction.html
data/: displayProjectList.json
data/projectData/development/: development.md  projectInfo.json
data/projectData/game_design/: game_design.md  projectInfo.json
data/projectData/game_design/alchemists_convoy/: projectInfo.json
data/projectData/game_design/smn_place_fixer/: projectInfo.json  smn_place_fixer.md
data/projectData/technical_art/: projectInfo.json  technical_art.md
data/templates/: projectpage.html
res/: index.html
scripts/: host.ps1  setservicekey.ps1  update.ps1
src/: main.rs
src/plugins/: mod.rs
src/plugins/plugin_components/: mod.rs
src/plugins/plugin_components/components/: mod.rs
src/plugins/plugin_components/components/comp_header/: mod.rs
src/plugins/plugin_components/components/comp_simple/: mod.rs
src/plugins/plugin_showcase/: html_builder.rs  html_markdown.rs  manager_list.rs  manager_project.rs  mod.rs
src/sys_auth/: core.rs  handlers.rs  mod.rs
src/sys_fileapi/: core.rs  handlers.rs
src/sys_statichost/: core.rs  handlers.rs
static/: auth.html  broadcast-test.html  development.html  files.html  game-design.html  index.html  styles-elements.css  styles-mobile.css  styles.css  technical-art.html  testbox.html
static/scripts/: broadcastManager.js  componentManager.js  linkReplacer.js  transitionManager.js
static/styles/: styles-base.css  styles-elements.css  styles-mobile.css
